# db-zpark-pyf

./: Makefile  pyproject.toml
.github/workflows/: ci-cd.yml
src/db_zpark_pyf/: workflow_subtask.py  workflow_subtasks_runner.py
src/examples/: basic_subtask.py  basic_workflow.py  delta_tables_workflow.py
tests/: test_worflow_subtasks_runner.py  test_workflow_subtask.py  test_workflow_task.py
